# cs474

./: CMakeLists.txt  README.md
images/PA02/Correlation/: Output.pgm
images/PA02/correlation/: Output.pgm  Thresh_220.pgm
images/PA02/masks/: Laplacian.pgm  PrewittX.pgm  PrewittY.pgm  SobelX.pgm  SobelY.pgm
images/PA02/median/averaged/: boat_averageFix_30_mask_15.pgm  boat_averageFix_30_mask_7.pgm  boat_averageFix_50_mask_15.pgm  boat_averageFix_50_mask_7.pgm  lenna_averageFix_30_mask_15.pgm  lenna_averageFix_30_mask_7.pgm  lenna_averageFix_50_mask_15.pgm  lenna_averageFix_50_mask_7.pgm
images/PA02/median/corrupted/: boat_corrupted_30.pgm  boat_corrupted_50.pgm  lenna_corrupted_30.pgm  lenna_corrupted_50.pgm
images/PA02/median/median/: boat_medianFix_30_mask_15.pgm  boat_medianFix_30_mask_7.pgm  boat_medianFix_50_mask_15.pgm  boat_medianFix_50_mask_7.pgm  lenna_medianFix_30_mask_15.pgm  lenna_medianFix_30_mask_7.pgm  lenna_medianFix_50_mask_15.pgm  lenna_medianFix_50_mask_7.pgm
images/PA02/sharpening/laplacian/: lenna.pgm  lenna_abs.pgm  sf.pgm  sf_abs.pgm
images/PA02/sharpening/prewitt/: lenna.pgm  lenna_X.pgm  lenna_Y.pgm  sf.pgm  sf_X.pgm  sf_Y.pgm
images/PA02/sharpening/sobel/: lenna.pgm  lenna_X.pgm  lenna_Y.pgm  sf_X.pgm  sf_Y.pgm  sf_result.pgm
images/PA02/sharpening/sobel_vs_prewitt/: lena_diff.pgm  sf_diff.pgm
images/PA02/spatial/: lenna1.pgm  lenna2.pgm  sf1.pgm  sf2.pgm
images/PA04/Experiment1/: boy_15x15Gaussian.pgm  boy_7x7Gaussian.pgm  boy_filtered.pgm  boy_filtered_spectrum.pgm  boy_noisy_spectrum.pgm
images/PA04/Experiment3/: blurred.pgm  lena_blurred.pgm  lenn_blurred_spectrum.pgm  lenna_blurred_spectrum.pgm  lenna_restored_spectrum.pgm  restored_inverse.pgm
images/equalized/: boat.pgm  f_16.pgm
include/: Image.h  ReadWrite.h
include/FFT/: fft.c  fft2D.c
include/PA02/: HelperFunctions.h
include/PA03/: fft.h  fft2D.c
include/PA04/: HelperFunctions.h  ImageComplex.h  boxmuller.c
src/PA01/: Equalization.cpp  ImageQuantization.cpp  ImageSampling.cpp
src/PA02/: Correlation.cpp  HelperFunctions.cpp  MedianFiltering.cpp  Sharpening.cpp  SpatialFiltering.cpp  Test.cpp
src/PA03/: Experiment1.cpp  Experiment2.cpp
src/PA04/: Experiment1.cpp  Experiment3.cpp  Experiment4.cpp  HelperFunctions.cpp  ImageComplex.cpp
src/ReadWrite/: Image.cpp  ReadImage.cpp  ReadImageHeader.cpp  WriteImage.cpp
src/Threshold/: Threshold.cpp
