PROJECT(Projects)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CXX11_FLAGS -std=gnu++11)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")


# Set sources
SET(GIVEN_SOURCE_CODE ${PROJECT_SOURCE_DIR}/src/ReadWrite/Image.cpp ${PROJECT_SOURCE_DIR}/src/ReadWrite/ReadImageHeader.cpp 
	${PROJECT_SOURCE_DIR}/src/ReadWrite/ReadImage.cpp ${PROJECT_SOURCE_DIR}/src/ReadWrite/WriteImage.cpp)

ADD_EXECUTABLE(Threshold ${PROJECT_SOURCE_DIR}/src/Threshold/Threshold.cpp ${GIVEN_SOURCE_CODE})

#PA01
ADD_EXECUTABLE(PA01_Equalization ${PROJECT_SOURCE_DIR}/src/PA01/Equalization.cpp ${GIVEN_SOURCE_CODE})
ADD_EXECUTABLE(PA01_Sampling ${PROJECT_SOURCE_DIR}/src/PA01/ImageSampling.cpp ${GIVEN_SOURCE_CODE})
ADD_EXECUTABLE(PA01_Quantization ${PROJECT_SOURCE_DIR}/src/PA01/ImageQuantization.cpp ${GIVEN_SOURCE_CODE})

#PA02
ADD_EXECUTABLE(PA02_Test ${PROJECT_SOURCE_DIR}/src/PA02/Test.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)
ADD_EXECUTABLE(PA02_Correlation ${PROJECT_SOURCE_DIR}/src/PA02/Correlation.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)
ADD_EXECUTABLE(PA02_Sharpening ${PROJECT_SOURCE_DIR}/src/PA02/Sharpening.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)

file(COPY ${PROJECT_SOURCE_DIR}/images/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/images)
