PROJECT(Projects)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")

# Set sources
SET(GIVEN_SOURCE_CODE ${PROJECT_SOURCE_DIR}/src/ReadWrite/Image.cpp ${PROJECT_SOURCE_DIR}/src/ReadWrite/ReadImageHeader.cpp 
	${PROJECT_SOURCE_DIR}/src/ReadWrite/ReadImage.cpp ${PROJECT_SOURCE_DIR}/src/ReadWrite/WriteImage.cpp)

ADD_EXECUTABLE(Threshold ${PROJECT_SOURCE_DIR}/src/Threshold/Threshold.cpp ${GIVEN_SOURCE_CODE})

#PA01
ADD_EXECUTABLE(PA01_Equalization ${PROJECT_SOURCE_DIR}/src/PA01/Equalization.cpp ${GIVEN_SOURCE_CODE})
ADD_EXECUTABLE(PA01_Sampling ${PROJECT_SOURCE_DIR}/src/PA01/ImageSampling.cpp ${GIVEN_SOURCE_CODE})
ADD_EXECUTABLE(PA01_Quantization ${PROJECT_SOURCE_DIR}/src/PA01/ImageQuantization.cpp ${GIVEN_SOURCE_CODE})

#PA02
ADD_EXECUTABLE(PA02_Correlation ${PROJECT_SOURCE_DIR}/src/PA02/Correlation.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)
ADD_EXECUTABLE(PA02_Sharpening ${PROJECT_SOURCE_DIR}/src/PA02/Sharpening.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)
ADD_EXECUTABLE(PA02_Spatial ${PROJECT_SOURCE_DIR}/src/PA02/SpatialFiltering.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)
ADD_EXECUTABLE(PA02_Median ${PROJECT_SOURCE_DIR}/src/PA02/MedianFiltering.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA02/HelperFunctions.cpp)

#PA03
ADD_EXECUTABLE(PA03_Experiment1 ${PROJECT_SOURCE_DIR}/src/PA03/Experiment1.cpp ${GIVEN_SOURCE_CODE})
ADD_EXECUTABLE(PA03_Experiment2 ${PROJECT_SOURCE_DIR}/src/PA03/Experiment2.cpp ${GIVEN_SOURCE_CODE})

#PA04
ADD_EXECUTABLE(PA04_Experiment1 ${PROJECT_SOURCE_DIR}/src/PA04/Experiment1.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA04/HelperFunctions.cpp)
ADD_EXECUTABLE(PA04_Experiment3 ${PROJECT_SOURCE_DIR}/src/PA04/Experiment3.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA04/HelperFunctions.cpp)
ADD_EXECUTABLE(PA04_Experiment4 ${PROJECT_SOURCE_DIR}/src/PA04/Experiment4.cpp ${GIVEN_SOURCE_CODE} ${PROJECT_SOURCE_DIR}/src/PA04/HelperFunctions.cpp)

FILE(COPY ${PROJECT_SOURCE_DIR}/images/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/images)
